--- a/modules/modules_body.tex
+++ b/modules/modules_body.tex
@@ -1,5 +1,7 @@
 \input{../modules/collision/modules_collision}
+\input{../modules/forcefield/forcefield_body}
 \input{../modules/articulatedbodies/softArticulations}
 \input{../modules/topology/meshTopologies}
 \input{../modules/GUI/GUI}
 \input{../modules/rendering/rendering}
+
