--- a/modules/topology/meshTopologies.tex
+++ b/modules/topology/meshTopologies.tex
@@ -44,7 +44,7 @@ The proposed hierarchy makes also a distinction between conformal and manifold m
 
 \begin{figure}[ht]
     \centering
-        \includegraphics[width=0.85\textwidth]{topology/BW_Topology_Family_Tree}
+        \includegraphics[width=0.85\textwidth]{topology/BW_Topology_Family_Tree.png}
      \caption{Family tree of topology objects. Dashed arrows indicate possible {\em Topological Mappings} from a topology object to another.}
     \label{fig:BW_Topology_Family_Tree}
 \end{figure}
