r3105/sofa-dev : Minor changes
 //partial sync (15/17 changes)//

--- a/SceneEquations/sceneEquations.tex
+++ b/SceneEquations/sceneEquations.tex
@@ -127,7 +127,7 @@ Solve $C(M + h^2K)C\Delta v = hC(f+hKv)$
 
 Apply conjugate gradient solution
 \begin{itemize}
- \item Does not addess the entries of the matrix
+ \item Does not address the entries of the matrix
  \item Performs only matrix-vector products and vector products
  \item Products can be performed blockwise, in any order
 \end{itemize}
