r3219/sofa-dev : DOC: fix minor errors.

--- a/design/mappings.tex
+++ b/design/mappings.tex
@@ -72,7 +72,7 @@ This flexible framework gives us a great freedom for physical modeling.
 \subsection{Mechanical mappings}
 Positions and velocities can be propagated top-down through our layer hierarchy using the relations presented in the previous section.
 In order to take the contact forces into account in the dynamics equation, we have to convert the contact forces applied to the contact points to forces applied to the DOF, where Newton's law is applied. 
-This requires an extension to the position and velocity amppings presented in section~\ref{sec:geometryLayers}. We call it \textit{mechanical mapping}.
+This requires an extension to the position and velocity mappings presented in section~\ref{sec:geometryLayers}. We call it \textit{mechanical mapping}.
 
 We derive a new, general method to propagate forces bottom-up through the layers of the geometrical hierarchy.
 Given forces $f_n$ applied to a geometry layer $n$, we derive the equivalent force applied to its parent layer $n-1$. 
