--- a/modules/rendering/rendering.tex
+++ b/modules/rendering/rendering.tex
@@ -72,7 +72,7 @@ To simply include a shader, add this into your node :
 
 \textit{vertFilename} and \textit{fragFilename} are the only mandatory parameters. Other optional parameters are about geometry shader : \textit{geoFilename}, \textit{geometryInputType}, \textit{geometryOutputType} and \textit{geometryVerticesOut}. A last parameter, \textit{turnOn}, is for debugging purpose, when you want to disable shader without restarting the scene.
 
-If you want to send values to uniform varaibles defined into the shader, a certain number of objects is available : 
+If you want to send values to uniform variables defined into the shader, a certain number of objects is available : 
 \begin{itemize}
  \item OglIntVariable,OglInt{2,3,4}Variable : for int and ivec{2,3,4}
  \item OglFloatVariable,OglFloat{2,3,4}Variable : for float and vec{2,3,4}
