r3221/sofa-dev : DOC: fix minor errors.

--- a/design/design_body.tex
+++ b/design/design_body.tex
@@ -3,7 +3,7 @@
 
 \subsection{UML Diagrams}
 
-\begin{figure}
+\begin{figure}[h]
 \centering
 \includegraphics[width=\linewidth]{uml-sofa-core.png}
 \caption{Classes of the sofa::core namespace.}
