--- a/articulatedBodies/softArticulations.tex
+++ b/articulatedBodies/softArticulations.tex
@@ -164,7 +164,7 @@ The last node contains the collision model. Nothing special here.
 The articulated body described previously models the skeleton of an object.
 To have the external model (for the visual model or the collision model), which follows correctly the skeleton movements, it has to be mapped with the skeleton. 
 \ 
-A skinning mapping allows us to do this link. The external model is from this moment to deform itself smoothly, i.e. without breaking points around the articulations.
+A skinning mapping allows us to do this link. The external model is from this moment able to deform itself smoothly, i.e. without breaking points around the articulations.
 
 The influence of the bones on each point of the external model is given by skinning weights.
 2 ways are possible to set the skinning weights to the mapping :
