--- a/modules/topology/meshTopologies.tex
+++ b/modules/topology/meshTopologies.tex
@@ -7,13 +7,13 @@ H. Delingette, B. André
 
 While mesh geometry describes where mesh vertices are located in space, mesh topology tells 
 how vertices are connected to each other by edges, triangles or any type of mesh element. 
-Both information are required on a computational mesh to perform :
+Both bits of information are required on a computational mesh to perform :
 
 \begin{itemize}
 
  \item \textbf{Mesh Visualization},
 
- \item \textbf{Collision detection} : some collision detection are mesh based (e.g.
+ \item \textbf{Collision detection} : some collision detection methods are mesh based (e.g.
 triangles or edges),
 
  \item \textbf{Mechanical Modeling} : deforming a mesh also requires to the
