r6893/sofa-dev : UPDATE++: data on FELagrangeP1 is filled in the good data format, but has to be verified the precision of values
 //partial sync (1/8 changes)//

--- a/modules/fem/FEMforMaterial.tex
+++ b/modules/fem/FEMforMaterial.tex
@@ -93,6 +93,9 @@ In general, on the dimension RdDIM, we have nbofDOF=nbNode x RdDIM. A velocity o
 In the case RdDIM where there are nbofNode nodes, a vectorial field has nbofDOF = nbNode x RdDIM  value. The presentation of these values is :
                \[ \textbf{u}= u_0^0 u_1^0 u_2^0 ...  \]
 \subsection{Integration: }
+
+\subsection{Auto-test : }
+These function on FEM are mostly linear transformation which is invertible. So we can verify all the computation, or pre-computation by the its inverted transformation. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 
 						      %%%%%%%%%%%%%%%%%%%%%%%%%%  Writer %%%%%%%%%%%%%%%%%%%%%%%%
